--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <script src="/node_modules/ace-builds/src-min-noconflict/ace.js" type="text/javascript"></script>
+    <script
+      src="/node_modules/ace-builds/src-min-noconflict/ace.js"
+      type="module"
+    ></script>
     <title>Langflow</title>
-</head>
-<body id='body' style="width: 100%; height:100%">
+  </head>
+  <body id="body" style="width: 100%; height: 100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style="width: 100vw; height:100vh" id='root'></div>
+    <div style="width: 100vw; height: 100vh" id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
-</body>
+  </body>
 </html>
