--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,7 +11,7 @@
     ></script>
     <title>Langflow</title>
   </head>
-  <body id="body" style="width: 100%; height: 100%">
+  <body id="body" class="dark" style="width: 100%; height: 100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div style="width: 100vw; height: 100vh" id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
